[tool.poetry]
name = "voladiff"
version = "0.1.0"
description = ""
authors = ["jpnotleks <jpnotleks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.9.0"
torch = "2.3.0"
numpy = "1.26.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
